--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,12 @@ file(GLOB SRC_FILES
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 add_executable(test ${SRC_FILES})
- 
+
+CMAKE_STATIC_LINKER_FLAGS="-Wl,--whole-archive -lgcc -lgcc_s -Wl,--no-whole-archive"
 if (UNIX)
         # Link libraries
         file(GLOB LINUX_STATIC_LIBRARIES
              ${CMAKE_CURRENT_SOURCE_DIR}/External/lib/x86/*.a)
-	set(LINUX_STATIC_LIBRARIES -Wl)
         target_link_libraries(test
                               ${LINUX_STATIC_LIBRARIES}
 			      dl
