--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/External/include")
 file(GLOB SRC_FILES
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+	 
+add_compile_options(-stdlib=libc++)	
 add_executable(sdl2-test ${SRC_FILES})
 
 if (UNIX)
