--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 # Project name
-project("sdl2-test")
+project("LekProjekt")
 
 # Include directory
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/External/include")
@@ -13,13 +13,13 @@ file(GLOB SRC_FILES
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 	 
 add_compile_options(-std=c++11)
-add_executable(sdl2-test ${SRC_FILES})
+add_executable(LekProjekt ${SRC_FILES})
 
 if (UNIX)
 	# Link libraries
 	file(GLOB LINUX_SHARED_LIBRARIES
 	     ${CMAKE_CURRENT_SOURCE_DIR}/External/lib/x86/*.so)
-	target_link_libraries(sdl2-test
+	target_link_libraries(LekProjekt
 			      ${LINUX_SHARED_LIBRARIES})
 endif()
 
